2009-04-09 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* db/init-db.mysql: more stuff to filter out.
	* db/webcompare-db.cs: added a parameter to support updating only
	the specified assemblies.

2009-04-08 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* App_Code/NodeUtils.cs: prevent nullref in weird cases when 
	'name' is null (seen in System.ServiceModel 3.5 2.0).

2009-04-07 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* INSTALL: added deployment instructions.
	* main.css: fix the logo url.
	* Makefile: use a variable for the files in the base folder that are
	pushed to the server.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Web.config: Removed file.
	* Makefile: don't push web.config to the server
	* App_Code/NodeUtils.cs: get the connection string from web.config.
	* Web.config-EDITME: added <appSettings> with placeholder for the
	connection string.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* db/webcompare-db.exe.config-EDITME:
	* db/webcompare-db.cs: read the connection string from the config
	file.
	* db/Makefile:
	* Makefile: do not push the local configuration file.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* main.css:
	* Makefile:
	* index.aspx:
	* db: New directory.
	* db/web.config: blocks access to this directory.
	* db/init-db.mysql: MySQL table and procedures creation.
	* db/webcompare-db.cs: compare/insert tool.
	* db/Makefile:
	* images/wait.gif: Removed file.
	* images/header-logo.png: New file.
	* App_Code/NodeUtils.cs: New file.
	* App_Code/CompareParameters.cs: add new property.
	* status.aspx: use the DB backend to populate the nodes.

2008-12-19  Miguel de Icaza  <miguel@novell.com>

	* status.aspx: Display how long ago the assemblies were updated.

2008-12-18  Miguel de Icaza  <miguel@novell.com>

	* Global.asax: Trigger an update if the files change on disk.

2008-12-18  Jb Evain  <jbevain@novell.com>

	* status.aspx: adjust to changes in the public fields names for
	ComparisonNodes.