@@ -12,7 +12,8 @@ body { font-size: small; margin: 0; padding: 0; background:#fff; color:#000; fon
 }
 
 #content {
-	margin: 0 1% 0 1%;
+	margin-left: 1.5em;
+	margin-right: 0.5em;
 }
 
 #footer {
@@ -34,11 +35,11 @@ h2 {
 	color: #fff;
 	padding: 5px;
 	text-align: center;
-	margin-right: 4%;
+	margin-right: 1em;
+	margin-top: 0.5em;
 }
 
 ul.assemblies {
-	padding-left: 6%;
 	list-style-type: none;
 	line-height: 1.5em;
 }
@@ -48,7 +49,7 @@ a:hover { color:#00f; text-decoration: none; font-weight: bold; }
 a:active { color:#ccf; text-decoration: none; }
 
 .icons {
-  width: 12px;
+  width: 14px;
   height: 1em;
   display: inline-block;
   background: no-repeat left bottom;
